# gedit-xml-encode

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  THANKS  bootstrap  configure.ac
build-aux/: .gitignore
m4/: .gitignore  gedit.m4
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  eo.po  es.po  fr.po  ja.po
src/: .gitignore  Makefile.am  xml-encode.plugin.desktop.in  xml-encode.py
